[package]
name = "kotlin-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["full"]}
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
